--- a/templates/navbars/anonymous.html
+++ b/templates/navbars/anonymous.html
@@ -10,7 +10,9 @@
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'register_user' %}">Sign Up</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a></li>
+                    {% if request.user.is_authenticated %}
                     <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    {% endif %}
                 </ul>
         </div>
         </div>
