--- a/templates/commons/registration_user.html
+++ b/templates/commons/registration_user.html
@@ -21,7 +21,7 @@
                     <div class="form-group"><label >Birth Date</label><input class="form-control" name="birth_date" type="date" required></div>
                     <div class="form-group"><label >Password</label><input class="form-control item" name="password" type="password" id="password" required></div>
                     <div class="form-group"><label >Email</label><input class="form-control item" name="email" type="email" id="email" required></div>
-                    <div class="form-group"><label >Email</label><select id="authorize_select" name="authorize">
+                    <div class="form-group"><label >Authorize</label><select id="authorize_select" name="authorize">
                         <option value="normal">Normal User</option>
                         <option value="doctor" selected>Doctor</option>
                     </select></div>
