--- a/templates/Normal/enter_result.html
+++ b/templates/Normal/enter_result.html
@@ -18,7 +18,7 @@
             <div class="form-group"><label style="margin: 18px;font-size: 20px;color: rgb(0,0,0);"><strong>Select Your Analysis Type</strong></label><select class="form-control-lg" style="margin: 30px;" name="analysis"><optgroup label="Select Analysis Type"><option value="blood" selected="">Blood Analysis</option><option value="urine">Urine Analysis</option><option value="others">Others</option></optgroup></select>
             <input type="file" style="margin: 20px;" name="analysis_file"><button class="btn btn-primary text-justify" type="submit" style="margin: 20px;">Submit</button></div>
         </form>
-    <div class="form-group"><label style="margin: 20px;">For interviewing with doctor:&nbsp;</label><a href="#"><img src="{% static 'img/doctor_date.jpg' %}" style="height: 60px;"></a></div>
+    <div class="form-group"><label style="margin: 20px;">For interviewing with doctor:&nbsp;</label><a href="{% url 'user_interview' %}"><img src="{% static 'img/doctor_date.jpg' %}" style="height: 60px;"></a></div>
     <div class="photo-gallery"></div>
     <div class="container">
         <div class="intro">
