--- a/templates/Normal/online_test2.html
+++ b/templates/Normal/online_test2.html
@@ -115,8 +115,8 @@
             <label><input type="radio" name="other" value="runny_nose"> Runny nose<br></label>
             <label><input type="radio" name="other" value="swelter"> Swelter<br></label>
             <label><input type="radio" name="other" value="fluid_loss"> Fluid loss<br></label>
-            <label><input type="radio" name="other" value="nope" checked> Fluid loss<br></label>
-        
+            <label><input type="radio" name="other" value="nope" checked> None<br></label>
+
         </div>
 
                 <label><input type="submit" value="Submit"></label>
